<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="textOnlyError">Do not enter numbers or special characters</string>
    <string name="mandatoryInput">Mandatory input</string>
    <string name="enterANumber">Enter a number</string>
    <string name="surface">Surface m2</string>
    <string name="media">Media</string>
    <string name="description">Description</string>
    <string name="pictureOfEstate">Picture of estate</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Filter</string>
    <string name="add_estate">Enter an estate</string>
    <string name="estateAgent">Estate agent</string>
    <string name="estateType">Estate type</string>
    <string name="sellPrice">Sell price</string>
    <string name="numberOfRooms">Number of rooms</string>
    <string name="numberOfBedrooms">Number of bedrooms</string>
    <string name="numberOfBathrooms">Number of bathrooms</string>
    <string name="fullDescription">Full description</string>
    <string name="address">Address</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="addPictures">Add pictures</string>
    <string name="picture_of_estate">Picture of estate</string>
    <string name="sold">Sold !!!</string>
    <string name="delete_button">Delete button</string>
    <string name="Add_photos">Please add photos</string>
    <string name="not_sold">Not sold</string>
    <string name="no_def_gps">No internet connection. Impossible to define gps estate position.</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="airport">airport</string>
    <string name="amusement_park">amusement park</string>
    <string name="aquarium">aquarium</string>
    <string name="art_gallery">art gallery</string>
    <string name="atm">atm</string>
    <string name="bakery">bakery</string>
    <string name="bank">bank</string>
    <string name="bar">bar</string>
    <string name="beauty_salon">beauty salon</string>
    <string name="bus">bus</string>
    <string name="cafe">cafe</string>
    <string name="church">church</string>
    <string name="city_hall">city hall</string>
    <string name="dentist">dentist</string>
    <string name="doctor">doctor</string>
    <string name="drugstore">drugstore</string>
    <string name="florist">florist</string>
    <string name="gas_station">gas station</string>
    <string name="gym">gym</string>
    <string name="hair_care">hair care</string>
    <string name="hospital">hospital</string>
    <string name="laundry">laundry</string>
    <string name="library">library</string>
    <string name="movie_theater">movie theater</string>
    <string name="museum">museum</string>
    <string name="park">park</string>
    <string name="pharmacy">pharmacy</string>
    <string name="post_office">post office</string>
    <string name="primary_school">primary school</string>
    <string name="restaurant">restaurant</string>
    <string name="school">school</string>
    <string name="secondary_school">secondary school</string>
    <string name="shopping_mall">shopping mall</string>
    <string name="spa">spa</string>
    <string name="store">store</string>
    <string name="subway_station">subway station</string>
    <string name="supermarket">supermarket</string>
    <string name="taxi_stand">taxi stand</string>
    <string name="train_station">train station</string>
    <string name="university">university</string>
    <string name="veterinary">veterinary</string>
    <string name="zoo">zoo</string>
    <string name="address_not_found">Address not found</string>
    <string name="entered_on">"Entered on "</string>
    <string name="sold_on">"Sold on "</string>
    <string name="map">Map</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="new_estate_added">New estate added !!!</string>
    <string name="estate_amended">Estate amended !!!</string>
    <string name="filter_your_estates">Filter your estates</string>
    <string name="minimum_price">Min price</string>
    <string name="maximum_price">Max price</string>
    <string name="minimum_surface">Min surface</string>
    <string name="maximum_surface">Max surface</string>
    <string name="minimum_number_of_rooms">Min rooms</string>
    <string name="maximum_number_of_rooms">Max rooms</string>
    <string name="minimum_number_of_bedrooms">Min bedrooms</string>
    <string name="maximum_number_of_bedrooms">Max bedrooms</string>
    <string name="minimum_number_of_bathrooms">Min bathrooms</string>
    <string name="maximum_number_of_bathrooms">Max bathrooms</string>
    <string name="all">All</string>
    <string name="sold_only">Sold only</string>
    <string name="not_sold_only">Not sold only</string>
    <string name="since_in_month">Since (in month)</string>
    <string name="no_result">No result</string>
    <string name="finance_simulator">Finance simulator</string>
    <string name="total_amount">total amount</string>
    <string name="contribution">Contribution</string>
    <string name="interest_rate">Annual interest rate %</string>
    <string name="duration">Duration (months)</string>
    <string name="monthly_payment">Monthly payment</string>
    <string name="by_month">by month</string>
    <string name="during">during</string>
    <string name="months">months</string>
    <string name="total_cost_of_financing">Total cost of financing</string>
</resources>
