<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_finance"
        android:icon="@drawable/ic_baseline_calculate_24"
        android:title="@string/finance_simulator"
        app:showAsAction="ifRoom" />
</menu>