<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/detailPhotoCell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture_of_estate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintTop_toTopOf="@+id/detailPhotoCell"
        app:layout_constraintRight_toRightOf="@+id/detailPhotoCell"
        android:background="?android:selectableItemBackground"
        android:contentDescription= "@string/delete_button" />
    <TextView
        android:id="@+id/soldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sold"
        android:gravity="center"
        android:textAlignment="center"
        app:flow_verticalAlign="center"
        app:layout_constraintTop_toTopOf="@+id/detailPhotoCell"
        app:layout_constraintLeft_toLeftOf="@+id/detailPhotoCell"
        app:layout_constraintBottom_toBottomOf="@+id/detailPhotoCell"
        app:layout_constraintRight_toRightOf="@+id/detailPhotoCell"
        android:textSize="30sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>